--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="sign_up_button_text">Sign up</string>
     <string name="username_edit_text_hint">Username</string>
     <string name="password_edit_text_hint">Password</string>
+    <string name="welcome_text">Welcome</string>
+    <string name="welcome_description_text">Welcome to our start app.\nPress next to continue in the jouyrney.</string>
+    <string name="continue_button_text">Continue</string>
+    <string name="complete_all_fields_text">Please complete all the fields.</string>
 </resources>
